--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "styled-components": "^6.0.8",
+    "styled-media-query": "^2.1.2",
     "tailwind-styled-components": "^2.2.0",
     "tailwindcss": "3.3.3"
   },
